Fixed some browser bugs: Firefox no-wrap & float bug:

--- a/src/main/scss/header.scss
+++ b/src/main/scss/header.scss
@@ -8,10 +8,9 @@ header {
   position: fixed;
   z-index: 9;
   overflow: visible;
-  white-space: nowrap;
 
   #main-navigation-wrapper {
-    display: inline-block;
+    float: left;
     vertical-align: top;
     margin-right: 20px;
     margin-top: 10px;
@@ -63,7 +62,7 @@ header {
   }
 
   #table-tools {
-    display: inline-block;
+    float: left;
     vertical-align: top;
     margin-top: 10px;
 
@@ -93,7 +92,6 @@ header {
         left: auto;
         width: 300px;
         line-height: 1.2em;
-        white-space: normal;
         height: 400px;
 
         li {
@@ -122,6 +120,7 @@ header {
           width: 100%;
           height: 90%;
           top: 10%;
+          white-space: normal;
 
           li.empty {
             color: $color-text-light-grey;
